# lazytask

./: .gitignore  .gitlint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES  Taskfile.yml  install.ps1  lazytask.toml  prek.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: main.yml  pr.yml  release.yml
docs/: tui_keybindings.md
scripts/: collect_licenses.sh  sync_agent_init_prompt.sh
src/: lib.rs  main.rs
src/cli/: ai.rs  command.rs  json_output.rs  mod.rs  parsed.rs
src/config/: loading.rs  mod.rs  prompts.rs  schema.rs  tests.rs  types.rs
src/config/prompts/: agent_init.md  done_reflection.md  learn_instructions.md  learn_threshold_hint.md
src/domain/: error.rs  file_name.rs  learning.rs  mod.rs  tests.rs  time.rs  types.rs  validation.rs
src/services/: clipboard.rs  editor.rs  errors.rs  learning.rs  mod.rs  query.rs  retention.rs  tasks.rs  tests.rs
src/storage/: agent_guidance.rs  learning.rs  mod.rs  tests.rs
src/storage/tasks/: crud.rs  markdown.rs  mod.rs  retention.rs
src/tui/: AGENTS.md  actions.rs  mod.rs  update_check.rs
src/tui/app/: dispatch.rs  input.rs  mod.rs  state.rs
src/tui/components/: log_panel.rs  mod.rs  preview.rs  task_list.rs
src/tui/render/: create_modal.rs  footer.rs  keybindings_overlay.rs  mod.rs  (+1 more)
tests/: cli_ai.rs  service.rs  storage.rs  trycmd_cli.rs  tui_state.rs
tests/cmd/: non_tty_requires_command.stdout  non_tty_requires_command.toml
