[package]
name = "lt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1"
toml_edit = "0.22"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.18"
trycmd = "0.15"
