[package]
name = "lazytask"
version = "0.6.0"
edition = "2024"
description = "A task manager built for AI coding agents — plain markdown files, strict CLI, keyboard-driven TUI"
license = "MIT"
repository = "https://github.com/erikmunkby/lazytask"
readme = "README.md"
keywords = ["task-manager", "cli", "tui", "ai-agents", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
arboard = "3"
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui = "0.30"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1"
toml_edit = "0.25"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"
trycmd = "1.1"
